public/css/client.css
/* ... */
#site-top h1 a, #site-top h1 a:visited { color: white; text-decoration:none; }
#site-top {
background: rgb(125,126,125);
background: -moz-linear-gradient(top, rgba(125,126,125,1) 0%, rgba(14,14,14,1) 100%);
background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(125,126,125,1)), color-stop(100%,rgba(14,14,14,1)));
background: -webkit-linear-gradient(top, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%);
background: -o-linear-gradient(top, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%);
background: -ms-linear-gradient(top, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%);
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=0 );
background: linear-gradient(top, rgba(125,126,125,1) 0%,rgba(14,14,14,1) 100%);
}

#site-top iframe { float:right; }
#site-top.small h1 { font-size:1.1em; }
#site-top.small img { display:none; }

#site-top #links ul li {  }

#login {
  font-family: Tahoma; 
  float: right;
  background: #666; 
  border:solid 1px #333;
  background: #333; 
  padding: 3px 10px;
  margin-bottom:5px;
  padding:4px;
  border-radius: 5px;
  position:relative;
  padding-bottom:10px;
}

#login.in { background-color: #333; border: solid 2px white; padding:2px; }
#login.out { width:175px; }
#login.out:hover, #login.out.open {background: #999; cursor:pointer;}
#login.out:hover .expand, #login.out.open .expand {color: #333; }
.expand { font-size:10px; display:inline-block;cursor:pointer; padding:2px; }
.expand:hover { }
.expanded { font-family: Tahoma; display:none; position:absolute; border:solid 1px #333; width:175px; top: 35px; right:0; background:#000; padding:4px; border-radius:5px; text-align:right; z-index:10;}
.expanded .tb { position:absolute; top:-4px; height:8px; left:-1px; width: 185px; background-color: #333;}
.expanded li { list-style: none; margin:6px 0; padding:0; float:none; }
.expanded li a, .expanded li a:visited { color: white; text-transform: uppercase; text-decoration: none; padding:6px 0; }
.expanded li a:hover { text-decoration: underline;}
.expanded ul { margin:0; padding:0; margin-top:5px; }
.expanded.show { display:block; }

#login .using { float:left; margin-right:10px;  }
#login .using { float:left; margin-right:10px; padding-top:4px;  }
#login li { float:left; list-style-type:none; padding-right: 10px; }
#login a, #login a:visited { color:white; text-decoration: none; padding-left:2px; }
#login a:hover { text-decoration: underline; }
#login a img { padding-right:2px; }
#login ul { float:right; margin:0; padding:0;  }
#login .logout{ display:inline-block; margin-left:3px;  }
#login img { padding-right: 2px; padding-bottom: 2px; }


#site-container{
  
  padding: 6px 4px;
  border-top:none;
}
#site-container #links ul { margin:0 20px; padding:0; }
#slides-wrapper { position:relative;  }
#slides-content {  margin:0 10px; position:relative; margin-top:20px; }
#title, #deck-title { float:left; }
#title h3, #deck-title h3 { margin:0; padding:0; float:left; font-size:24px; font-weight: lighter; padding-right:10px;  }
#buttons, #deck-buttons { float:right; }

#controls-wrapper { padding: 2px; }


#slide-single { position:absolute; left: 160px; right:0; top:0; bottom:0;  }
#slide-source-wrapper, #slider-source-design, #slide-source, #slide-design { margin: 0; position: absolute; top: 30px; bottom: 0; left: 0; right: 0; }
#slide-source { top:0; }
#slide-design iframe { width:100%; border: solid 2px #333; height: 400px; } 

#slides-global { float:left; width: 150px; border:solid 3px; }
#slides-collection { height: 400px; overflow-y:scroll; margin:0; padding:0; background: #ddd; }
#slides-commands { margin-top:3px; border-bottom:1px solid #eee; background: #eee; padding:3px 10px; }
#slides-collection li { width: 90px; height:90px; margin:10px auto; padding:0; background: #88d;  overflow:hidden; }
#slides-collection li.active { outline: solid 2px orange; }


#template-controls-container { position:absolute; height:400px; width: 150px; border:solid 3px #111; background: #777; color: #eee; z-index: 101;  }
#template-controls-container.ui-draggable-dragging { opacity:.6; }
#template-controls { margin:0; padding:0; }
#template-controls li { margin:0; padding:10px; list-style-type:none;}
#template-controls .container {  width: 80%; }


.editor { float:left; width: 400px; min-height: 100px; margin:10px; vertical-align: top; }
.editor:hover { outline: dashed 4px orange; }
.editor.active { outline: solid 4px orange; }


.decks li {float:left; width: 100px; height: 100px; margin:10px; border: 1px solid; list-style-type: none; }
.decks li h4 { margin: 4px 0; padding: 2px; }
.author { font-size: .8em; color: #999; }

.avatar { position:relative;}
.service {
    background: rgba(255, 255, 255, .6);
    border-radius: 20px;
    padding: 2px;
    box-shadow: 0 0 5px #000;
}


.colorpicker {
    z-index: 102;
    width: 356px;
    height: 176px;
    overflow: hidden;
    position: absolute;
    background: url(../img/colorpicker/colorpicker_background.png);
    font-family: Arial, Helvetica, sans-serif;
    display: none;
}
.colorpicker_color {
    width: 150px;
    height: 150px;
    left: 14px;
    top: 13px;
    position: absolute;
    background: #f00;
    overflow: hidden;
    cursor: crosshair;
}
.colorpicker_color div {
    position: absolute;
    top: 0;
    left: 0;
    width: 150px;
    height: 150px;
    background: url(../img/colorpicker/colorpicker_overlay.png);
}
.colorpicker_color div div {
    position: absolute;
    top: 0;
    left: 0;
    width: 11px;
    height: 11px;
    overflow: hidden;
    background: url(../img/colorpicker/colorpicker_select.gif);
    margin: -5px 0 0 -5px;
}
.colorpicker_hue {
    position: absolute;
    top: 13px;
    left: 171px;
    width: 35px;
    height: 150px;
    cursor: n-resize;
}
/* ... */

